---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: ??.??.2022
  Features:
    - Support Krastorio2 equipment (Thanks runtimethecat!).
  Changes:
    - With Krastorio2 installed Space Spidertron now requries fuel.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 29.07.2022
  Features:
    - Add support for Picker Dollies.
    - Added a breathing light to the dock.
    - Added custom mini-map representation.
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 24.07.2022
  Bugfixes:
    - Fix crash on a new map with this mod loaded. (Thanks XenoLupus!)
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 20.07.2022
  Changes:
    - More resilliant to other mods' spider-vehicles, which are now marked as undockable.
    - More robust docking procedure by arming by spider instead of dock.
    - More robust way of finding the technology to add the space spidertron to.
    - Increase Space Spidertron recipe to use 100 rocket fuel (when applicable)
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 17.07.2022
  Changes:
    - Decreased dock collisionbox to allow walking between them.
    - Raise build event event when undocking spider.
  Bugfixes:
    - Fix always defaulting space spidertron to white, except when spawned from a rocket launch.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 15.07.2022
  Changes:
    - Dock now have a more sensible recipe.
  Bugfixes:
    - Fixed incompatibility with other mods which define recipes differently, like Spidertron Tiers. (Thanks runtimethecat!)